# deepagents-agents

./: HANDOFF.md
data-analyst-agent/: .env.example  .gitignore  AGENTS.md  README.md  agent.py  agent_internals_tutorial.ipynb  data_sources.yaml  pyproject.toml  streamlit_app.py
data-analyst-agent/doc/: README.md  adding-data-sources.md  architecture.md  backend-development.md  operations-and-testing.md  safety-and-hitl.md  semantic-model-best-practices.md  using-the-agent.md
data-analyst-agent/doc/diagrams/: data-source-onboarding.html  system-architecture.architecture.json  system-architecture.html
data-analyst-agent/scripts/: start.sh
data-analyst-agent/skills/query-writing/: SKILL.md
data-analyst-agent/skills/schema-exploration/: SKILL.md
data-analyst-agent/tests/: conftest.py  test_api.py  test_backends.py  test_data_sources.py  test_hitl.py  test_live_smoke.py  test_nested_hitl.py  test_run_manager.py  test_semantic_model.py  test_sql_safety.py  test_stores.py  test_ui_helpers.py
data-analyst-agent/text2sql_agent/: __init__.py  agent.py  api.py  config.py  run_manager.py  schemas.py  semantic.py  sql_tools.py  stores.py
data-analyst-agent/text2sql_agent/backends/: __init__.py  base.py  factory.py  sqlite.py  validation.py
data-analyst-agent/text2sql_agent/ui/: __init__.py  api_client.py  components.py
data-analytics-agent/: .env.example  AGENTS.md  README.md  agent.py  agent_internals_tutorial.ipynb  pyproject.toml  streamlit_app.py
data-analytics-agent/.streamlit/: config.toml
data-analytics-agent/data_analytics_agent/: __init__.py  api.py  config.py  coordinator.py  data_sources.py  execution_budget.py  profiling.py  run_manager.py  schemas.py  semantic.py  stores.py
data-analytics-agent/data_analytics_agent/agents/: __init__.py
data-analytics-agent/doc/: README.md  adding-data-sources.md  architecture.md  backend-development.md  operations-and-testing.md  safety-and-hitl.md  semantic-model-best-practices.md  snowflake-blueprint.md  using-the-agent.md
data-analytics-agent/scripts/: start.sh
data-analytics-agent/semantic/: chinook.osi.yaml  financial.osi.yaml
data-analytics-agent/tests/: conftest.py  test_api.py  test_backends.py  test_data_sources.py  test_execution_budget.py  test_hitl.py  test_live_smoke.py  test_nested_hitl.py  test_profiling.py  test_run_manager.py  test_snowflake_backend.py  test_sql_safety.py  test_stores.py  test_ui_helpers.py  test_visualization.py
(+28 files in other folders)
