[project]
name = "data-analytics-agent"
version = "0.4.0"
description = "A source-aware, human-reviewed SQL and visualization agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.12,<2.0.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "streamlit>=1.59.2",
    "httpx>=0.28.1",
    "sqlglot>=27.20.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "plotly>=6.3.0",
    "pgeocode>=0.5.0",
    "langchain-community>=0.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "nbconvert>=7.16.6",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/deepagents"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_analytics_agent*"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "live: requires OPENAI_API_KEY and at least one ready data source",
]
